Fix missing colors

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ All colors MUST be HSL.
     --tech-blue: 217 91% 60%;
     --tech-purple: 263 85% 65%;
     --tech-cyan: 183 100% 75%;
+    --tech-red: 0 84% 60%;
     --success: 142 71% 45%;
     --warning: 46 90% 56%;
     --danger: 0 84% 60%;
@@ -95,6 +96,7 @@ All colors MUST be HSL.
     --tech-blue: 217 91% 60%;
     --tech-purple: 263 85% 65%;
     --tech-cyan: 183 100% 75%;
+    --tech-red: 0 84% 60%;
     --success: 142 71% 45%;
     --warning: 46 90% 56%;
     --danger: 0 84% 60%;
